<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingStart="24dp"
    tools:context="philipnewby.co.uk.instygram.login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/instagram_logo_content_desc"
        android:padding="20dp"
        app:srcCompat="@drawable/title" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/username_hint_text"
        android:inputType="textPersonName"
        android:padding="20dp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword"
        android:padding="20dp" />


    <TextView
        android:id="@+id/forgotPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logIn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/forget_password_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createAccountView"
        android:layout_marginBottom="10dp"
        android:onClick="onLogin"
        android:text="@string/log_in_button_text"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logIn"
        android:layout_alignBottom="@+id/logIn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/material_drawer_divider"
        android:drawableLeft="@android:drawable/ic_media_play"
        android:drawablePadding="20dp"
        android:drawableStart="@android:drawable/ic_media_play"
        android:onClick="onLogOut"
        android:text="@string/log_out_button_text"
        android:textColor="@color/material_drawer_divider"
        android:visibility="gone" />


    <TextView
        android:id="@+id/createAccountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="onSignUpSwitch"
        android:padding="10dp"
        android:text="@string/sign_up_new_account"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logIn"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/forgotPasswordView"
        android:layout_toRightOf="@+id/forgotPasswordView"
        android:onClick="onForgotPassword"
        android:padding="10dp"
        android:text="@string/click_here_link_text"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />


</RelativeLayout>
