<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingStart="24dp"
    tools:context="philipnewby.co.uk.instygram.signup.SignUpActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/instagram_logo_content_desc"
        android:padding="20dp"
        app:srcCompat="@drawable/title" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/username_hint_text"
        android:inputType="textPersonName"
        android:padding="20dp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword"
        android:padding="20dp" />

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logInSwitch"
        android:layout_marginBottom="10dp"
        android:onClick="onCreateUser"
        android:text="@string/create"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/logInSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="onLogInSwitch"
        android:padding="10dp"
        android:text="@string/log_in_button_text"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/create"
        android:layout_below="@id/password"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:onClick="onChangeProfileImage"
            android:src="@color/material_drawer_primary_dark"
            app:riv_corner_radius="40dp"
            app:riv_mutate_background="true"
            app:riv_oval="false" />


    </FrameLayout>


</RelativeLayout>
